--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -7,14 +7,14 @@ jobs:
     name: Run E2E Tests
     runs-on: ubuntu-latest
     services:
-      postgres:
-        image: bitnami/postgresql
-        ports:
-          - 5432:5432
+      mysql:
+        image: mysql:8.0
         env:
-          POSTGRESQL_USERNAME: docker
-          POSTGRESQL_PASSWORD: docker
-          POSTGRESQL_DATABASE: manage-gym
+          MYSQL_DATABASE: testdb
+          MYSQL_ROOT_PASSWORD: testrootpass
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
