--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -24,6 +24,7 @@ jobs:
           node-version: 18
           cache: 'npm'
       - run: npm ci
+      - run: npx prisma generate
       - run: npm run test:e2e
         env:
           JWT_SECRET: testing
