--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -10,8 +10,8 @@ jobs:
       mysql:
         image: mysql:8.0
         env:
-          MYSQL_DATABASE: testdb
-          MYSQL_ROOT_PASSWORD: testrootpass
+          MYSQL_DATABASE: manage-gym-api
+          MYSQL_ROOT_PASSWORD: root
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
@@ -27,4 +27,4 @@ jobs:
         env:
           JWT_SECRET: testing
           DATABASE_CLIENT: mysql
-          DATABASE_URL: "mysql://root:@localhost:3306/manage-gym-api"
+          DATABASE_URL: "mysql://root:root@localhost:3306/manage-gym-api"
